# teste

./: .travis.yml  CHANGELOG.rst  README.md  pyproject.toml  requirements.txt
changes/: 4.doc
tests/: test.py
